[package]
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
description = "A port of the VRPN (Virtual Reality Peripheral Network) protocol to async code in Rust"
edition = "2018"
license = "BSL-1.0"
name = "vrpn"
readme = "README.md"
repository = "https://github.com/vrpn/vrpn-rs"
version = "0.1.0"

[dependencies]
bitflags = "1.3"
bytes = "1.1.0"
cgmath = "0.18.0"
chrono = "^0.4.6"
downcast-rs = "1.0.4"
futures = {version = "0.3.17", features = ["compat"]}
socket2 = "0.4.2"
thiserror = "1.0"
tk-listen = {version = "0.2.1", optional = true}
tokio = {version = "1.1", features = ["full"], optional = true}
tokio-util = {version = "0.6", features = ["net", "compat", "codec"], optional = true}
url = "^2.2.2"

[dev-dependencies]
hex-literal = "0.3.3"
proptest = "^1.0.0"
static_assertions = "1.1.0"
tokio-test = "0.4.2"

[features]
# async-tokio = ["tokio", "mio", "tk-listen"]
async-tokio = ["tokio", "tk-listen", "tokio-util"]
# async-tokio = []
incomplete-tokio = ["async-tokio"]

[[bin]]
name = "vrpn_tokio_print_devices"
required-features = ["incomplete-tokio", "async-tokio"]

[[bin]]
name = "vrpn_tokio_null_tracker"
required-features = ["incomplete-tokio", "async-tokio"]

[[bin]]
name = "sync_client_simple"

[[bin]]
name = "sync_client"
