[package]
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
description = "A port of the VRPN (Virtual Reality Peripheral Network) protocol to async code in Rust"
edition = "2018"
license = "BSL-1.0"
name = "vrpn"
readme = "README.md"
repository = "https://github.com/vrpn/vrpn-rs"
version = "0.1.0"

[dependencies]
async-std = {version = "1.10.0", optional = true}
async-stream = {version = "0.3.2", optional = true}
bitflags = "1.3"
bytes = "1.1.0"
cgmath = {version = "0.18.0", optional = true}
futures = {version = "0.3.17", features = ["compat"]}
pin-project-lite = {version = "0.2", optional = true}
socket2 = "0.4.2"
thiserror = "1.0"
tk-listen = {version = "0.2.1", optional = true}
tokio = {version = "1.1", features = ["full"], optional = true}
tokio-util = {version = "0.6", features = ["net", "compat", "codec"], optional = true}
url = "^2.2.2"

[dev-dependencies]
hex-literal = "0.3.3"
proptest = "^1.0.0"
static_assertions = "1.1.0"
tokio-test = "0.4.2"

[features]
# async-tokio = ["tokio", "mio", "tk-listen"]
async-tokio = ["tokio", "tk-listen", "tokio-util"]
# async-tokio = []
incomplete-tokio = ["async-tokio"]
vrpn-async-std = ["async-std", "pin-project-lite", "async-stream"]

[[bin]]
name = "vrpn_tokio_print_devices"
required-features = ["incomplete-tokio", "async-tokio"]

[[bin]]
name = "vrpn_tokio_null_tracker"
required-features = ["incomplete-tokio", "async-tokio"]

[[bin]]
name = "sync_client_simple"

[[bin]]
name = "sync_client"

[[bin]]
name = "vrpn_async_std_client_simple"
required-features = ["vrpn-async-std"]

[[bin]]
name = "vrpn_async_std_client_simple2"
required-features = ["vrpn-async-std"]

[[bin]]
name = "vrpn_async_std_client_simple3"
required-features = ["vrpn-async-std"]
