[package]
name = "vrpn-connection"
version = "0.1.0"
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
license = "BSL-1.0"
edition = "2018"

[dependencies]
bytes = "0.4.10"
downcast-rs = "1.0.3"
quick-error = "1.2.2"
vrpn-base = { path = "../vrpn-base" }
vrpn-buffer = { path = "../vrpn-buffer" }
